# zx_ula_pico

./: .gitignore  AGENTS.md  CMakeLists.txt  HARDWARE.md  README.md  nextsteps.md  recap.mc  recap.md
include/: clock.h  colour_lut.h  dram.h  io.h  pinmap.h  ula_dma.h  video.h
reference/: ula_zx48k.v
src/: main.cpp
src/clock/: clock.cpp
src/cpu/: cpu.cpp  cpu.h  cpu_clock.pio  sync.pio
src/dram/: dram.cpp  dram.h  dram.pio  main.cpp
src/io/: io.cpp  io.h
src/ula/: ula_dma.cpp  ula_dma.h
src/video/: pixel.pio  sync.pio  video.cpp  video.h  video.pio  video_init.cpp
